Update Scala and Gradle